# gwkjs

./: .gitignore  COPYING  Makefile-insttest.am  Makefile-modules.am  Makefile-test.am  Makefile.am  NEWS  README  autogen.sh  configure.ac  gwkjs-1.0.pc.in  gwkjs-internals-1.0.pc.in  gwkjs.doap
doc/: SpiderMonkey_Memory.txt  cairo.txt  gwkjs-byte-array.txt
examples/: README  http-server.js
gi/: arg.cpp  arg.h  boxed.cpp  boxed.h  closure.cpp  closure.h  enumeration.cpp  enumeration.h  foreign.cpp  foreign.h  function.cpp  function.h  fundamental.cpp  fundamental.h  gerror.cpp  gerror.h  gtype.cpp  gtype.h  gwkjs_gi_probes.d  gwkjs_gi_trace.h  interface.cpp  interface.h  keep-alive.cpp  keep-alive.h  ns.cpp  ns.h  object.cpp  object.h  param.cpp  param.h  proxyutils.cpp  proxyutils.h  repo.cpp  repo.h  union.cpp  union.h  value.cpp  value.h
gwkjs/: byteArray.cpp  byteArray.h  compat.h  console.cpp  context-private.h  context.cpp  context.h  coverage-internal.h  coverage.cpp  coverage.h  exceptions.cpp  exceptions.h  gi.cpp  gi.h  gwkjs-module.h  gwkjs.h  gwkjs.stp.in  importer.cpp  importer.h  jsapi-dynamic-class.cpp  jsapi-private.cpp  jsapi-private.h  jsapi-util-array.cpp  jsapi-util-error.cpp  jsapi-util-string.cpp  jsapi-util.cpp  jsapi-util.h  mem.cpp  mem.h  native.cpp  native.h  runtime.cpp  runtime.h  stack.cpp  type-module.cpp  type-module.h
installed-tests/: gwkjs-unit.cpp  script.test.in
installed-tests/js/: complex.ui  jsunit.gresources.xml  test0010basic.js  test0020importer.js  test0030basicBoxed.js  test0040mainloop.js  testByteArray.js  testCairo.js  testClass.js  testCoverage.js  testEverythingBasic.js  testEverythingEncapsulated.js  testExceptions.js  testFormat.js  testFundamental.js  testGDBus.js  testGIMarshalling.js  testGObjectClass.js  testGObjectInterface.js  testGTypeClass.js  testGettext.js  testGtk.js  testInterface.js  testJS1_8.js  testLang.js  testLocale.js  testMainloop.js  testMetaClass.js  testNamespace.js  testParamSpec.js  testReflectObject.js  testSignals.js  testSystem.js  testTweener.js  testUnicode.js
libgwkjs-private/: gwkjs-gdbus-wrapper.cpp  gwkjs-gdbus-wrapper.h  gwkjs-gtk-util.c  gwkjs-gtk-util.h  gwkjs-util.cpp  gwkjs-util.h
modules/: cairo-context.cpp  cairo-gradient.cpp  cairo-image-surface.cpp  cairo-linear-gradient.cpp  cairo-module.h  cairo-path.cpp  cairo-pattern.cpp  cairo-pdf-surface.cpp  cairo-private.h  cairo-ps-surface.cpp  cairo-radial-gradient.cpp  cairo-region.cpp  cairo-solid-pattern.cpp  cairo-surface-pattern.cpp  cairo-surface.cpp  cairo-svg-surface.cpp  cairo.cpp  console.cpp  console.h  coverage.js  format.js  gettext.js  jsUnit.js  lang.js  modules.cpp  modules.gresource.xml  modules.h  system.cpp  system.h
modules/overrides/: GObject.js  Gio.js  Gtk.js
test/: gwkjs-test-coverage.cpp  gwkjs-tests-add-funcs.h  gwkjs-tests.cpp  mock-js-resources.gresource.xml  run-with-dbus
test/gwkjs-test-coverage/cache_invalidation/after/: mock-js-resource-cache-after.gresource.xml
test/gwkjs-test-coverage/cache_invalidation/before/: mock-js-resource-cache-before.gresource.xml
util/: crash.cpp  crash.h  error.cpp  error.h  glib.cpp  glib.h  hash-x32.cpp  hash-x32.h  log.cpp  log.h  misc.cpp  misc.h
